# sound_sense

./: Cargo.toml  README.md
src/: initialization.rs  main.rs
src/transcription/: mod.rs  transcription_helpers.rs  transcription_service.rs
